--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
     font-family:sans-serif;
     font-size:13px;
+    margin: 1em 1em 5em 1em;
 }
 
 a:link, a:visited {
@@ -16,13 +17,30 @@ a:hover, a:active {
 }
 
 h1 {
-    font-size:1.5em;
+    font-size:1.8em;
     margin:0.3em 0 0.3em;
 }
 
 h2 {
+    font-size:1.5em;
+    margin:0.3em 0 0.3em;
+}
+
+h3 {
     font-size:1.2em;
     margin:0.3em 0 0.3em;
+}
+
+ul.menu {
+  list-style: none;
+  margin:0;
+  padding:0;
+}
+
+li.menu {
+  display: inline;
+  padding:0;
+  margin:0 0.8em 0 0;
 }
 
 textarea {
@@ -42,12 +60,13 @@ input.text, select.text {
 }
 
 form {
-    width:50em;
-    padding:0.5em 1em 0.5em;
+    width:60%;
+    padding:0.5em 1em 1em 1em;
 }
 
 p.input {
     height:1.6em;
+    margin:0.3em 0 0.3em 0;
 }   
 
 label.inputlabel {
